# craftgame

./: .env.example  .gitignore  README.md  docker-compose.dev.yaml  pyproject.toml
craftgame/: __main__.py  config.py  di.py  logging.py  util.py
craftgame/ai/: dto.py  exceptions.py  service.py
craftgame/ai/interfaces/: item_generator.py
craftgame/api/: __init__.py
craftgame/bot/: __init__.py  constants.py  keyboards.py  states.py
craftgame/bot/handlers/: common.py  craft.py  inventory.py
craftgame/bot/middlewares/: user.py
craftgame/common/: base.py  exceptions.py
craftgame/core/services/: ai.py  craft.py  inventory.py  item.py  user.py
craftgame/craft/: dto.py  model.py  repository.py  service.py
craftgame/craft/interfaces/: reader.py  repo.py  writer.py
craftgame/database/repositories/: craft.py  inventory.py  item.py  user.py
craftgame/dto/: inventory.py  user.py
craftgame/exceptions/: ai.py  inventory.py  user.py
craftgame/inventory/: dto.py  exceptions.py  model.py  repository.py  service.py
craftgame/inventory/interfaces/: deleter.py  reader.py  repo.py  writer.py
craftgame/item/: dto.py  model.py  repository.py  service.py
craftgame/item/interfaces/: __init__.py  deleter.py  reader.py  (+3 more)
craftgame/models/: craft.py  inventory.py  item.py  user.py
craftgame/user/: dto.py  exceptions.py  model.py  repository.py  service.py
migrations/: env.py
migrations/versions/: 344f3ec3e44d_fix.py  36127aa7ebd3_crafts_and_items.py  79a68675c459_inventory_rename.py  c3641873304f_fix.py  cadb14fbdc10_init.py  e2ad9140259a_inventories.py
(+33 files in other folders)
