[project]
name = "craftgame"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.12",
    "openai>=1.84.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
